Updated: numerous minor layout issues in portfolio items Removed: extra main tag for portfolio items Updated: selected page link in nav styling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -123,6 +123,10 @@
     }
 
     .max-w-headline {
-        max-width: 20ch;
+        max-width: 16ch;
+
+        @screen md {
+            max-width: 20ch;
+        }
     }
 }
